<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screen_home.HeaderHome">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_header"
            android:layout_width="87dp"
            android:layout_height="121dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/scroll_menu_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/logo"
            android:layout_marginVertical="20dp"/>

        <HorizontalScrollView
            android:id="@+id/scroll_menu_header"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/logo_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:fadeScrollbars="false">

            <LinearLayout
                android:id="@+id/categories_header_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/entries_menu_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tab_entries"
                    android:fontFamily="@font/anton"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="3dp"
                    android:layout_marginRight="15dp"
                    android:textSize="16sp"
                    android:textColor="@color/green"
                    android:backgroundTint="@color/off_white"
                    android:background="@drawable/border_radius_texts_header"/>

                <TextView
                    android:id="@+id/main_dishes_menu_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tab_main_dishes"
                    android:fontFamily="@font/anton"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="3dp"
                    android:layout_marginRight="15dp"
                    android:textSize="16sp"
                    android:textColor="@color/off_white"
                    android:background="@drawable/border_radius_texts_header"/>

                <TextView
                    android:id="@+id/drinks_menu_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tab_drinks"
                    android:fontFamily="@font/anton"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="3dp"
                    android:layout_marginRight="15dp"
                    android:textSize="16sp"
                    android:textColor="@color/off_white"
                    android:background="@drawable/border_radius_texts_header"/>

                <TextView
                    android:id="@+id/desserts_menu_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tab_desserts"
                    android:fontFamily="@font/anton"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="3dp"
                    android:textSize="16sp"
                    android:textColor="@color/off_white"
                    android:background="@drawable/border_radius_texts_header"/>

            </LinearLayout>

        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>