<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screen_order.MenuScreenOrder">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/shadow"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@drawable/shadow"
            app:layout_constraintBottom_toBottomOf="@id/view_resume_screen_order"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:id="@+id/view_resume_screen_order"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:background="@drawable/view_total_screen_order"
            app:layout_constraintBottom_toTopOf="@id/btn_add_screen_order"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/text_total_screen_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_total_price"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:fontFamily="@font/anton"
            android:layout_marginStart="40dp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toTopOf="@id/view_resume_screen_order"
            app:layout_constraintBottom_toBottomOf="@id/view_resume_screen_order"
            app:layout_constraintStart_toStartOf="@id/view_resume_screen_order"
            app:layout_constraintEnd_toStartOf="@id/price_total_screen_order"/>

        <TextView
            android:id="@+id/price_total_screen_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:fontFamily="@font/anton"
            android:layout_marginEnd="40dp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="@id/view_resume_screen_order"
            app:layout_constraintBottom_toTopOf="@id/time_total_screen_order"
            app:layout_constraintStart_toEndOf="@id/text_total_screen_order"
            app:layout_constraintEnd_toEndOf="@id/view_resume_screen_order"/>

        <TextView
            android:id="@+id/time_total_screen_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textSize="12sp"
            android:fontFamily="@font/anton"
            android:layout_marginStart="3dp"
            app:layout_constraintStart_toEndOf="@id/icon_clock_screen_order"
            app:layout_constraintTop_toBottomOf="@id/price_total_screen_order"
            app:layout_constraintBottom_toBottomOf="@id/view_resume_screen_order"
            app:layout_constraintEnd_toEndOf="@id/price_total_screen_order"/>

        <ImageView
            android:id="@+id/icon_clock_screen_order"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@drawable/icon_clock"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toTopOf="@id/time_total_screen_order"
            app:layout_constraintBottom_toBottomOf="@id/time_total_screen_order"
            app:layout_constraintStart_toStartOf="@id/price_total_screen_order"
            app:layout_constraintEnd_toStartOf="@id/time_total_screen_order" />

        <TextView
            android:id="@+id/btn_add_screen_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:text="@string/text_btn_screen_order_add"
            android:textColor="@color/grey_"
            android:fontFamily="@font/anton"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@color/off_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_accomplish_screen_order"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"/>

        <TextView
            android:id="@+id/btn_accomplish_screen_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:text="@string/text_btn_screen_order_accomplish"
            android:textColor="@color/off_white"
            android:fontFamily="@font/anton"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@color/yellow"
            app:layout_constraintStart_toEndOf="@id/btn_add_screen_order"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>